# Dagster_testing

./: .gitignore
ay_test_project/: README.md  pyproject.toml  setup.cfg  setup.py
ay_test_project/ay_test_project/: __init__.py  definitions.py  test_smartsheet_Environment.py
ay_test_project/ay_test_project/assets/: insurance_claim_tracking.py  pi_webapi_integration.py  smart_sheets_economic_curtailment.py  turbine_data_extraction.py
ay_test_project/ay_test_project/jobs/: insurance_claims_jobs.py
ay_test_project/ay_test_project/resources/: pi_webapi_resource.py  quickbase_resource.py  smartsheet_resource.py
ay_test_project/ay_test_project/utils/: field_mappings.py
ay_test_project/ay_test_project_tests/: fixed_assets.py
ay_test_project/data/: cleaned_smartsheet_data_20250620_164834.csv  processed_curtailment_data_20250620_164840.csv  raw_smartsheet_data_20250620_164738.csv  transformed_curtailment_data_20250620_164837.csv
ay_test_project/tmp6n2rys4e/history/: runs.db
ay_test_project/tmp6n2rys4e/history/runs/: 5ecc2ff3-56ad-4b72-b4c5-1d9065c00620.db  index.db
ay_test_project/tmp6n2rys4e/schedules/: schedules.db
omi_dagster_workspace/: dg.toml
omi_dagster_workspace/.tmp_dagster_home_y_4z6ypt/history/: runs.db
omi_dagster_workspace/deployments/local/: pyproject.toml
omi_dagster_workspace/projects/economic_curtailment_thresholds/: definitions.py  pyproject.toml
omi_dagster_workspace/projects/economic_curtailment_thresholds/resources/: pi_webapi_resource.py
omi_dagster_workspace/projects/economic_curtailment_thresholds/src/economic_curtailment_thresholds/: definitions.py
omi_dagster_workspace/projects/economic_curtailment_thresholds/src/economic_curtailment_thresholds/assets/: pi_webapi_assets.py  smartsheet_assets.py
omi_dagster_workspace/projects/economic_curtailment_thresholds/src/economic_curtailment_thresholds/resources/: duckdb_resource.py  smartsheet_resource.py
omi_dagster_workspace/projects/qb_ss_insurance_tracker/: pyproject.toml
omi_dagster_workspace/projects/qb_ss_insurance_tracker/src/qb_ss_insurance_tracker/: definitions.py  utils.py
omi_dagster_workspace/projects/qb_ss_insurance_tracker/src/qb_ss_insurance_tracker/assets/: quickbase_assets.py  smartsheet_assets.py
omi_dagster_workspace/projects/qb_ss_insurance_tracker/src/qb_ss_insurance_tracker/processors/: __init__.py  smartsheet_processors.py
omi_dagster_workspace/projects/qb_ss_insurance_tracker/src/qb_ss_insurance_tracker/resources/: config_resource.py  duckdb_resource.py  quickbase_resource.py  smartsheet_resource.py
omi_dagster_workspace/projects/qb_ss_insurance_tracker/tests/: test_assets.py  test_resourcs.py  test_utils.py
