[project]
name = "economic_curtailment_thresholds"
requires-python = ">=3.9,<=3.13.3"
version = "0.1.0"
dependencies = [
    "dagster==1.11.2",
    "dagster-duckdb>=0.27.2",
    "dagster-duckdb-pandas>=0.27.2",
    "pandas>=2.3.1",
    "requests>=2.32.4",
    "requests-kerberos>=0.15.0",
    "smartsheet-python-sdk>=3.0.5",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
    "pytest>=8.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "economic_curtailment_thresholds"
registry_modules = [
    "economic_curtailment_thresholds.components.*",
]


