[project]
name = "qb_ss_insurance_tracker"
requires-python = ">=3.9,<=3.13.3"
version = "0.1.0"
dependencies = [
    "dagster==1.11.2",
    "dagster-duckdb>=0.27.2",
    "dagster-duckdb-pandas>=0.27.2",
    "pandas>=2.3.1",
    "pyqb>=0.2.5",
    "smartsheet-python-sdk>=3.0.5",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "qb_ss_insurance_tracker"
registry_modules = [
    "qb_ss_insurance_tracker.components.*",
]


