[project]
name = "qb_ss_insurance_tracker"
requires-python = ">=3.9,<=3.13.3"
version = "0.1.0"
dependencies = [
    "dagster==1.11.2",
    "dagster-duckdb>=0.27.2",
    "dagster-duckdb-pandas>=0.27.2",
    "pandas>=2.3.1",
    "pip>=25.2",
    "pyqb>=0.2.5",
    "python-dotenv>=1.1.1",
    "smartsheet-python-sdk>=3.0.5",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
    "pytest>=8.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "qb_ss_insurance_tracker"
registry_modules = [
    "qb_ss_insurance_tracker.components.*",
]


[tool.pytest.ini_options]
testpaths = ["tests"]                 # ← Point to tests/ outside src/
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests", 
    "slow: Slow tests that hit external APIs",
    "requires_env: Tests that require environment variables"
]

# Note: With tests outside src/, imports work like:
# from qb_ss_insurance_tracker.resources.quickbase_resource import QuickBaseResource

